# ComfyUI-LatentInput

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
assets/configs/: test_prompts.py  test_workflow.json
assets/images/: .gitkeep
docs/: en.md  zh-CN.md
examples/: LoadLatent(Advanced).json
js/: latent_loader.js
locales/: zh-CN.json
nodes/: __init__.py  image_processing_nodes.py  latent_nodes.py  model_wrapper_nodes.py  text_utility_nodes.py
utils/: __init__.py  data_converters.py  image_helpers.py
